Шейдеры и textures.ltx из gamedata_16.05.2019

--- a/gamedata/textures/textures.ltx
+++ b/gamedata/textures/textures.ltx
@@ -1039,6 +1039,7 @@
 		act\act_faces_1_02	=	bump_mode[use:act\act_faces_1_02_bump], material[0.69], parallax[no]
 		act\act_faces_2_09  = bump_mode[use:act\act_faces_2_09_bump], material[0.69], parallax[no]
         act\act_faces_4_04  = bump_mode[use:act\act_faces_4_04_bump], material[0.69], parallax[no]
+		act\act_face_wolf	=	bump_mode[none], material[0.69], parallax[no]
 		act\act_head_01_1	=	bump_mode[none], material[0.69], parallax[no]
 		act\act_head_02_1	=	bump_mode[none], material[0.69], parallax[no]
 		act\act_head_03_3	=	bump_mode[none], material[0.69], parallax[no]
@@ -1087,7 +1088,8 @@
 		act\act_head_mask	=	bump_mode[use:act\act_head_mask_bump], material[0.66], parallax[no]
 		act\act_head_mask_01	=	bump_mode[use:act\act_head_mask_bump], material[0.66], parallax[no]
 		act\act_green_stalker_head_3_mask	=	bump_mode[use:act\act_green_stalker_head_3_mask_b], material[0.66], parallax[no]
-		act\act_green_stalker_head_3_nova	=	bump_mode[use:act\act_green_stalker_head_3_nova_bump], material[0.66], parallax[no]
+;		act\act_green_stalker_head_3_nova	=	bump_mode[use:act\act_green_stalker_head_3_nova_bump], material[0.66], parallax[no]
+		act\act_green_stalker_head_3_nova	=	bump_mode[none], material[0.66], parallax[no]
 		act\act_ushanka_01	=	bump_mode[none], material[0.66], parallax[no]
 		; морда зомби
 		act\act_head_zombi	=	bump_mode[use:act\act_head_zombi_bump], material[0.63], parallax[no]
@@ -1190,7 +1192,6 @@
 		; перчатки
 ;		act\act_arm            = bump_mode[use:act\act_arm_bump], material[0.65], parallax[no]
 		act\act_arm_perchatka            = bump_mode[use:act\act_arm_perchatka_bump], material[0.65], parallax[no]
-		act\act_arm_perchatka_cs         = bump_mode[use:act\act_arm_perchatka_bump], material[0.65], parallax[no]
 		; брон€
 		act\act_arnyker				=	bump_mode[none], material[0.65], parallax[no]
 		act\act_backpacks_1			=	bump_mode[use:act\act_backpacks_1_bump], material[0.65], parallax[no]
@@ -1203,10 +1204,12 @@
 		act\act_bandi2				=	bump_mode[use:act\act_bandi2_bump], material[0.65], parallax[no]
 		act\act_bandi3				=	bump_mode[use:act\act_bandit_bump], material[0.65], parallax[no]
 		act\act_bandi4				=	bump_mode[use:act\act_bandit_bump], material[0.65], parallax[no]
-		act\act_bandi5				=	bump_mode[use:act\act_bandi5_bump], material[0.65], parallax[no]
+;		act\act_bandi5				=	bump_mode[use:act\act_bandi5_bump], material[0.65], parallax[no]
+		act\act_bandi5				=	bump_mode[none], material[0.65], parallax[no]
 		act\act_bandi6				=	bump_mode[use:act\act_bandi6_bump], material[0.65], parallax[no]
 		act\act_bandi7				=	bump_mode[use:act\act_bandi7_bump], material[0.65], parallax[no]
-		act\act_bandi8				=	bump_mode[use:act\act_bandi8_bump], material[0.65], parallax[no]
+;		act\act_bandi8				=	bump_mode[use:act\act_bandi8_bump], material[0.65], parallax[no]
+		act\act_bandi8				=	bump_mode[none], material[0.65], parallax[no]
 ;		act\act_bandi9				=	bump_mode[use:act\act_bandi9_bump], material[0.65], parallax[no]
 		act\act_bandit				=	bump_mode[use:act\act_bandit_bump], material[0.65], parallax[no]
 		act\act_beslker				=	bump_mode[none], material[0.65], parallax[no]
@@ -1235,6 +1238,7 @@
 		act\act_body_stalker_21		=	bump_mode[none], material[0.65], parallax[no]
 		act\act_body_stalker_22		=	bump_mode[none], material[0.65], parallax[no]
 		act\act_body_stalker_23		=	bump_mode[none], material[0.65], parallax[no]
+		act\act_boots		=	bump_mode[act\act_boots_bump], material[0.65], parallax[no]
 		act\act_clear_sky_1	=	bump_mode[none], material[0.65], parallax[no]
 		act\act_clear_sky_2	=	bump_mode[none], material[0.65], parallax[no]
 		act\act_dark_stalker	=	bump_mode[act\act_dark_stalker_bump], material[0.65], parallax[no]
@@ -1365,7 +1369,6 @@
 		act\bill\bill	=	bump_mode[use:act\bill\bill_bump], material[0.65], parallax[no]
 		act\borov\b_body	=	bump_mode[use:act\borov\b_body_bump], material[0.65], parallax[no]
 		act\borov\b_face	=	bump_mode[use:act\borov\b_face_bump], material[0.68], parallax[no]
-		act\chuv\chuvak	=	bump_mode[use:act\chuv\chuvak_bump], material[0.65], parallax[no]
 		act\edick\edick	=	bump_mode[use:act\edick\edick_bump], material[0.65], parallax[no]
 		act\edick\volosy	=	bump_mode[use:act\edick\volosy_bump], material[0.65], parallax[no]
 		act\gordon\gordon	=	bump_mode[use:act\gordon\gordon_bump], material[0.65], parallax[no]
@@ -1477,7 +1480,9 @@
         wpn\wpn_bolt                     = bump_mode[use:wpn\wpn_bolt_bump], material[2.85], parallax[no]
         wpn\wpn_bullet1                  = bump_mode[none], material[2.85], parallax[no]
         wpn\wpn_bullet1_545              = bump_mode[none], material[2.85], parallax[no]
-        wpn\wpn_colt                     = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
+;        wpn\wpn_colt                     = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
+		wpn_colt1911	                 = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
+		wpn_colt1911cr                   = bump_mode[use:wpn\wpn_colt_bump], material[2.85], parallax[no]
         wpn\wpn_desert_eagle             = bump_mode[use:wpn\wpn_desert_eagle_bump], material[2.85], parallax[no]
         wpn\wpn_FN2000                   = bump_mode[none], material[2.85], parallax[no]
         wpn\wpn_fn2000_new               = bump_mode[use:wpn\wpn_fn2000_new_bump], material[2.85], parallax[no]
@@ -6278,14 +6283,34 @@
         wood\wood_zabor_iov              = bump_mode[use:wood\wood_zabor_iov_bump], material[1.00], parallax[yes]
 
 
+;-------[[ new NPC textures -BEGIN- ]]------------------------ = bump_mode[none], material[0.69], parallax[no]
+	act\chuv\chuvak 				= bump_mode[use:act\chuv\chuvak_bump], material[0.65], parallax[no]
+	act\meatcapgore01 				= bump_mode[none], material[0.69], parallax[no]
+;	item\item_spichki 				= bump_mode[use:item\item_spichki_bump], material[1.00], parallax[yes]
+	act\bratva\act_adidas 				= bump_mode[use:act\act_adidas_bump], material[0.66], parallax[no]
+	act\bratva\act_adidas_n 			= bump_mode[use:act\bratva\act_adidas_bump], material[0.66], parallax[no]
+	act\bratva\act_burnt 				= bump_mode[use:act\bratva\act_burnt_bump], material[0.66], parallax[no]
+	act\bratva\act_nike 				= bump_mode[use:act\bratva\act_nike_bump], material[0.66], parallax[no]
+	act\bratva\act_nike_a 				= bump_mode[use:act\bratva\act_nike_bump], material[0.66], parallax[no]
+;	act\bratva\act_jeans 				= bump_mode[use:act\bratva\act_jeans_bump], material[0.65], parallax[no]
+	act\bratva\act_jeans 				= bump_mode[none], material[0.69], parallax[no]
+	act\bratva\act_head_b33				= bump_mode[use:act\bratva\act_head_b33_bump], material[0.68], parallax[no]
+	act\bratva\act_head_bb3				= bump_mode[use:act\bratva\act_head_bb3_bump], material[0.69], parallax[no]
+	
+	
+;-------[[ new NPC texturess -END- ]]------------------------
+
+
+		
 ;-------[[ weapon&addon pack textures -BEGIN- ]]------------------------ = bump_mode[none], material[2.85], parallax[no]
 	;перчатки (закрытые)
 		act\act_arm_glove            	 = bump_mode[use:act\act_arm_glove_bump], material[0.65], parallax[no]
-	;рукава
+	;рукава ---перекрывает *.thm (дл€ –ук’уд'а ќ√—– переименовать в act_arm_perchatka_cs_sviter)
 		act\act_arm_sleve            	 = bump_mode[use:act\act_arm_sleve_bump], material[0.65], parallax[no]
-; аддоны
+	; аддоны
 		wpn\upgrades\addons_1			= bump_mode[use:wpn\upgrades\addons_1_bump], material[2.85], parallax[no]
 	; ручки
+	; приклады
 	; подствольники
 		wpn\upgrades\wpn_gp25			= bump_mode[use:wpn\upgrades\wpn_gp25_bump], material[2.85], parallax[no]
 	; глушаки
@@ -6295,33 +6320,42 @@
 		wpn\upgrades\silencer_pbs4		= bump_mode[use:wpn\upgrades\silencer_pbs4_bump], material[2.85], parallax[no]
 		wpn\upgrades\silencer_tgp-a		= bump_mode[use:wpn\upgrades\silencer_tgp-a_bump], material[2.85], parallax[no]
 		wpn\upgrades\silencer_tgp-v		= bump_mode[use:wpn\upgrades\silencer_tgp-v_bump], material[2.85], parallax[no]
-
-		wpn\upgrades\pistolsil			= bump_mode[use:wpn\upgrades\pistolsil_bump], material[2.85], parallax[no]
-		wpn\upgrades\sil_aps			= bump_mode[use:wpn\upgrades\sil_aps_bump], material[2.85], parallax[no]
+		wpn\upgrades\silencer_apb		= bump_mode[use:wpn\upgrades\silencer_apb_bump], material[2.85], parallax[no]
+;wpn\upgrades\pistolsil			= bump_mode[use:wpn\upgrades\pistolsil_bump], material[2.85], parallax[no]
 		wpn\upgrades\sil_colt			= bump_mode[use:wpn\upgrades\sil_colt_bump], material[2.85], parallax[no]
-
+		wpn\upgrades\silencer_brm		= bump_mode[use:wpn\upgrades\silencer_brm_bump], material[2.85], parallax[no]
+		wpn\upgrades\silencer_gm		= bump_mode[use:wpn\upgrades\silencer_gm_bump], material[2.85], parallax[no]
+		wpn\upgrades\silencer_gm5		= bump_mode[use:wpn\upgrades\silencer_gm5_bump], material[2.85], parallax[no]
 	; прицелы
 		wpn\upgrades\scope_1p29			= bump_mode[use:wpn\upgrades\scope_1p29_bump], material[2.85], parallax[no]
-;wpn\upgrades\scope_1pn51		= bump_mode[use:wpn\upgrades\scope_1pn51_bump], material[2.85], parallax[no]
-		wpn\upgrades\scope_1pn51		= bump_mode[none], material[2.85], parallax[no]
+	wpn\upgrades\scope+1pn51		= bump_mode[use:wpn\upgrades\scope+1pn51_bump], material[2.85], parallax[no]
+wpn\upgrades\scope_1pn51		= bump_mode[none], material[2.85], parallax[no]
 		wpn\upgrades\scope_1p59			= bump_mode[use:wpn\upgrades\scope_1p59_bump], material[2.85], parallax[no]
 		wpn\upgrades\scope_acog			= bump_mode[use:wpn\upgrades\scope_acog_bump], material[2.85], parallax[no]
+		wpn\upgrades\scope_susat		= bump_mode[use:wpn\upgrades\scope_susat_bump], material[2.85], parallax[no]
 		wpn\upgrades\scope_eotech		= bump_mode[use:wpn\upgrades\scope_eotech_bump], material[2.85], parallax[no]
 		wpn\upgrades\scope_kobra		= bump_mode[use:wpn\upgrades\scope_kobra_bump], material[2.85], parallax[no]
 		wpn\upgrades\scope_pso-1		= bump_mode[use:wpn\upgrades\scope_pso-1_bump], material[2.85], parallax[no]
 		wpn\upgrades\scope_pso11		= bump_mode[use:wpn\upgrades\scope_pso11_bump], material[2.85], parallax[no]
-;wpn\upgrades\collimator_lens01	= bump_mode[use:wpn\upgrades\collimator_lens01_bump], material[2.85], parallax[no]
+wpn\upgrades\scope_pso-1m2-1		= bump_mode[use:wpn\upgrades\scope_pso-1m2-1_bump], material[2.85], parallax[no]
+		wpn\upgrades\magnifier			= bump_mode[use:wpn\upgrades\magnifier_bump], material[2.85], parallax[no]
+		wpn\upgrades\scope_irnv			= bump_mode[use:wpn\upgrades\scope_irnv_bump], material[2.85], parallax[no]
+		wpn\upgrades\scope_us-o			= bump_mode[use:wpn\upgrades\scope_us-o_bump], material[2.85], parallax[no]
+wpn\upgrades\scope_aimpoint		= bump_mode[none], material[2.85], parallax[no]
+wpn\upgrades\scope_pvs			= bump_mode[none], material[2.85], parallax[no]
 		wpn\upgrades\collimator_lens01	= bump_mode[none], material[2.85], parallax[no]
-;wpn\upgrades\collimator_linza0	= bump_mode[use:wpn\upgrades\collimator_linza0_bump], material[2.85], parallax[no]
 		wpn\upgrades\collimator_linza0	= bump_mode[none], material[2.85], parallax[no]
-;wpn\upgrades\collimator_metka0	= bump_mode[use:wpn\upgrades\collimator_metka0_bump], material[2.85], parallax[no]
-		wpn\upgrades\collimator_metka0	= bump_mode[none], material[2.85], parallax[no]
-;wpn\upgrades\lens_eotech		= bump_mode[use:wpn\upgrades\lens_eotech_bump], material[2.85], parallax[no]
-;		wpn\upgrades\lens_eotech		= bump_mode[none], material[2.85], parallax[no]
-;wpn\upgrades\lens_rdot_0		= bump_mode[use:wpn\upgrades\lens_rdot_0_bump], material[2.85], parallax[no]
+wpn\upgrades\collimator_metka0	= bump_mode[none], material[0.65], parallax[no]
+wpn\upgrades\lens_aimpnt		= bump_mode[none], material[0.65], parallax[no]
+wpn\upgrades\lens_eotech		= bump_mode[use:wpn\upgrades\lens_eotech_bump], material[0.65], parallax[no]
+;wpn\upgrades\lens_eotech		= bump_mode[none], material[0.65], parallax[no]
 		wpn\upgrades\lens_rdot_0		= bump_mode[none], material[2.85], parallax[no]
-;wpn\upgrades\lens_scope1		= bump_mode[use:wpn\upgrades\lens_scope1_bump], material[2.85], parallax[no]
 		wpn\upgrades\lens_scope1		= bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\lens_scope2		= bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\dot_white			= bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\lens_acog			= bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\grid_acog			= bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\mark_acog			= bump_mode[none], material[0.65], parallax[no]
 	; магазины
 		wpn\upgrades\mag_ak74o			= bump_mode[use:wpn\upgrades\mag_ak74o_bump], material[2.85], parallax[no]
 		wpn\upgrades\mag_ak100			= bump_mode[use:wpn\upgrades\mag_ak100_bump], material[2.85], parallax[no]
@@ -6333,7 +6367,23 @@
 		wpn\upgrades\mag_rpk			= bump_mode[use:wpn\upgrades\mag_rpk_bump], material[2.85], parallax[no]
 ;		wpn\upgrades\mag_rpk			= bump_mode[none], material[2.85], parallax[no]
 		wpn\upgrades\mag_svd			= bump_mode[use:wpn\upgrades\mag_svd_bump], material[2.85], parallax[no]
+		wpn\upgrades\mk_box				= bump_mode[use:wpn\upgrades\mk_box_bump], material[2.85], parallax[no]
+		wpn\upgrades\hk_box				= bump_mode[use:wpn\upgrades\hk_box_bump], material[2.85], parallax[no]
+;		wpn\upgrades\mag_9x39			= bump_mode[use:wpn\upgrades\mag_9x39_bump], material[2.85], parallax[no]
+		wpn\upgrades\mag_9x39			= bump_mode[none], material[2.85], parallax[no]		
+		; гильзы	
+		wpn\upgrades\shell				= bump_mode[use:wpn\upgrades\shell_bump], material[2.85], parallax[no]
+	; гранаты
+		wpn\wpn_f1						= bump_mode[use:wpn\wpn_f1_bump], material[2.85], parallax[no]
+		wpn\wpn_rgd5					= bump_mode[use:wpn\wpn_rgd5_bump], material[2.85], parallax[no]
+		wpn\wpn_zarya2					= bump_mode[use:wpn\wpn_zarya2_bump], material[2.85], parallax[no]
+		wpn\wpn_rdg-m					= bump_mode[use:wpn\wpn_rdg-m_bump], material[2.85], parallax[no]
+;		wpn\wpn_rdg-r					= bump_mode[use:wpn\wpn_rdg-r_bump], material[2.85], parallax[no]
+		wpn\wpn_rdg-r					= bump_mode[none], material[2.85], parallax[no]
 ; стволы
+	wpn\wpn_aek973					= bump_mode[use:wpn\wpn_aek973_bump], material[2.85], parallax[no]
+	wpn\rpk74\body_rpk				= bump_mode[use:wpn\rpk74\body_rpk_bump], material[2.85], parallax[no]
+	wpn\rpk74\grips_rpk				= bump_mode[use:wpn\rpk74\grips_rpk_bump], material[2.85], parallax[no]
 		wpn\ak74\body_ak74				= bump_mode[use:wpn\ak74\body_ak74_bump], material[2.85], parallax[no]
 		wpn\ak74\grips_ak74_w			= bump_mode[use:wpn\ak74\grips_ak74_w_bump], material[2.85], parallax[no]
 		wpn\ak74\priklad_ak74			= bump_mode[use:wpn\ak74\priklad_ak74_bump], material[2.85], parallax[no]
@@ -6348,17 +6398,96 @@
 		wpn\aks74ub\grips_aksu74		= bump_mode[use:wpn\aks74ub\grips_aksu74_bump], material[2.85], parallax[no]
 		wpn\svd\svd_body				= bump_mode[use:wpn\svd\svd_body_bump], material[2.85], parallax[no]
 		wpn\svd\svd_grip				= bump_mode[use:wpn\svd\svd_grip_bump], material[2.85], parallax[no]
-
-;--------------------------------------------------------------------------------------------------------------------
-		wpn\wpn_oc33					= bump_mode[use:wpn\wpn_oc33_bump], material[2.85], parallax[no]
-		wpn\wpn_tt33					= bump_mode[use:wpn\wpn_tt33_bump], material[2.85], parallax[no]
-		wpn\wpn_pm						= bump_mode[use:wpn\wpn_pm_bump], material[2.85], parallax[no]
+		wpn\wpn_m76_1					= bump_mode[none], material[2.85], parallax[no]
+		wpn\wpn_m76_2					= bump_mode[none], material[2.85], parallax[no]
+		wpn\vepr12tor\wpn_vepr12		= bump_mode[use:wpn\vepr12tor\wpn_vepr12_bump], material[2.85], parallax[no]
+		wpn\vepr12tor\wpn_vepr12_add	= bump_mode[use:wpn\vepr12tor\wpn_vepr12_add_bump], material[2.85], parallax[no]
+		wpn\vepr12tor\wpn_vepr12_attach	= bump_mode[use:wpn\vepr12tor\wpn_vepr12_attach_bump], material[2.85], parallax[no]
+		wpn\wpn_winchester_1887			= bump_mode[use:wpn\wpn_winchester_1887_bump], material[2.85], parallax[no]
+		wpn\wpn_apb						= bump_mode[use:wpn\wpn_apb_bump], material[2.85], parallax[no]
+		wpn\wpn_m712_frame				= bump_mode[use:wpn\wpn_m712_frame_bump], material[2.85], parallax[no]
+		wpn\wpn_m712_stockmag			= bump_mode[use:wpn\wpn_m712_stockmag_bump], material[2.85], parallax[no]
+		wpn\wpn_m1895					= bump_mode[use:wpn\wpn_m1895_bump], material[2.85], parallax[no]
+		wpn\wpn_luger_p08				= bump_mode[use:wpn\wpn_luger_p08_bump], material[2.85], parallax[no]
 		wpn\wpn_gsh18					= bump_mode[use:wpn\wpn_gsh18_bump], material[2.85], parallax[no]
-		wpn\wpn_bm-16                   = bump_mode[use:wpn\wpn_bm-16_bump], material[2.85], parallax[no]
-		wpn\upgrades\shell				= bump_mode[use:wpn\upgrades\shell_bump], material[2.85], parallax[no]
-		wpn\upgrades\hunter_scope		= bump_mode[use:wpn\upgrades\hunter_scope_bump], material[2.85], parallax[no]
-		wpn\wpn_mp133                   = bump_mode[use:wpn\wpn_mp133_bump], material[2.85], parallax[no]
-
-;-------[[ weapon&addon pack textures -END- ]]------------------------
+		wpn\wpn_tt33					= bump_mode[use:wpn\wpn_tt33_bump], material[2.85], parallax[no]
+		wpn\wpn_grach					= bump_mode[use:wpn\wpn_grach_bump], material[2.85], parallax[no]
+		wpn\wpn_ingram					= bump_mode[use:wpn\wpn_ingram_bump], material[2.85], parallax[no]
+		wpn\wpn_mp40					= bump_mode[use:wpn\wpn_mp40_bump], material[2.85], parallax[no]
+		wpn\wpn_ppsh41					= bump_mode[use:wpn\wpn_ppsh41_bump], material[2.85], parallax[no]
+wpn\glock18c\glock18c_slide				= bump_mode[none], material[2.85], parallax[no]
+wpn\glock18c\glock18c_frame				= bump_mode[none], material[2.85], parallax[no]
+wpn\glock18c\glock18c_mag				= bump_mode[none], material[2.85], parallax[no]	
 		wpn\wpn_l115a3\wpn_l115a3 		= bump_mode[use:wpn\wpn_l115a3\wpn_l115a3_bump], material[0.65], parallax[no]
-        wpn\wpn_l115a3\linza 		    = bump_mode[use:wpn\wpn_l115a3\linza_bump], material[0.65], parallax[no]
+		wpn\wpn_l115a3\linza 		    = bump_mode[use:wpn\wpn_l115a3\linza_bump], material[0.65], parallax[no]
+		wpn\svu\svu-a_body		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\svu\svu_as_bibod	=	bump_mode[use:wpn\svu\svu_as_bibod_bump], material[0.65], parallax[no]
+		wpn\mosin\body	 				 = bump_mode[use:wpn\mosin\body_bump], material[2.85], parallax[no]
+		wpn\mosin\bolt	 				 = bump_mode[use:wpn\mosin\bolt_bump], material[2.85], parallax[no]
+		wpn\mosin\scope_pu1	 			 = bump_mode[use:wpn\mosin\scope_pu1_bump], material[2.85], parallax[no]
+		wpn\mosin\sil_762_bramit	 	 = bump_mode[use:wpn\mosin\sil_762_bramit_bump], material[2.85], parallax[no]
+wpn\vss\vss							= bump_mode[use:wpn\vss\vss_bump], material[2.85], parallax[no]
+wpn\vsk94\wpn_9a91					= bump_mode[use:wpn\vsk94\wpn_9a91_bump], material[2.85], parallax[no]
+wpn\vsk94\wpn_addon_sil_9a91		= bump_mode[use:wpn\vsk94\wpn_addon_sil_9a91_bump], material[2.85], parallax[no]
+wpn\vsk94\wpn_vsk94					= bump_mode[use:wpn\vsk94\wpn_vsk94_bump], material[2.85], parallax[no]
+wpn\vsk94\wpn_vsk94_butt			= bump_mode[use:wpn\vsk94\wpn_vsk94_butt_bump], material[2.85], parallax[no]
+wpn\vss\wpn_vihr					= bump_mode[use:wpn\vss\wpn_vihr_bump], material[2.85], parallax[no]
+wpn\vss\wpn_addon_sil_vihr			= bump_mode[use:wpn\vss\wpn_addon_sil_vihr_bump], material[2.85], parallax[no]
+		wpn\knife\wpn_knife_6x4	 		 = bump_mode[use:wpn\knife\wpn_knife_6x4_bump], material[2.85], parallax[no]
+		wpn\knife\m9_blade	 			 = bump_mode[use:wpn\knife\m9_blade_bump], material[2.85], parallax[no]
+		wpn\knife\m9_grip	 			 = bump_mode[use:wpn\knife\m9_grip_bump], material[2.85], parallax[no]
+		swmt\crossbow\crossbow_body	 	 = bump_mode[none], material[2.85], parallax[no]
+		swmt\crossbow\crossbow_arrow	 = bump_mode[none], material[2.85], parallax[no]
+		wpn\wpn_flamer	 				 = bump_mode[use:wpn\wpn_flamer_bump], material[2.85], parallax[no]
+		wpn\wpn_bm-16	 				 = bump_mode[use:wpn\wpn_bm-16_bump], material[2.85], parallax[no]
+		wpn\wpn_toz_34	 				 = bump_mode[use:wpn\wpn_toz_34_bump], material[2.85], parallax[no]
+		wpn\wpn_toz-34	 				 = bump_mode[use:wpn\wpn_toz-34_bump], material[2.85], parallax[no]
+		wpn\wpn_kedr	 				 = bump_mode[use:wpn\wpn_kedr_bump], material[2.85], parallax[no]
+		wpn\wpn_pp2000	 				 = bump_mode[use:wpn\wpn_wpn_pp2000_bump], material[2.85], parallax[no]
+		wpn\wpn_sks	 					 = bump_mode[use:wpn\wpn_sks_bump], material[2.85], parallax[no]
+		wpn\wpn_toz-34	 				 = bump_mode[use:wpn\wpn_toz-34_bump], material[2.85], parallax[no]
+;---		wpn\wpn_mp133	 				 = bump_mode[use:wpn\wpn_mp133_bump], material[2.85], parallax[no]
+		wpn\wpn_mp153	 				 = bump_mode[use:wpn\wpn_mp153_bump], material[2.85], parallax[no]
+		wpn\groza\gr0za_part1			 = bump_mode[none], material[2.85], parallax[no]
+		wpn\groza\gr0za_part2			 = bump_mode[none], material[2.85], parallax[no]
+		wpn\l85\wpn_ag80	 			 = bump_mode[use:wpn\l85\wpn_ag80_bump], material[2.85], parallax[no]
+		wpn\l85\wpn_l85	 				 = bump_mode[use:wpn\l85\wpn_l85_bump], material[2.85], parallax[no]
+		wpn\l85\wpn_l85_carryhandle		 = bump_mode[use:wpn\l85\wpn_l85_carryhandle_bump], material[2.85], parallax[no]
+		wpn\l85\wpn_l85a2	 			 = bump_mode[use:wpn\l85\wpn_l85a2_bump], material[2.85], parallax[no]
+		wpn\fn2000\wp_fn2000	 		 = bump_mode[use:wpn\fn2000\wp_fn2000_bump], material[2.85], parallax[no]
+		wpn\fn2000\wp_gl1	 			 = bump_mode[use:wpn\fn2000\wp_gl1_bump], material[2.85], parallax[no]
+
+	
+;--------------------------------------------------------------------------------------------------------------------
+;-------[[ weapon&addon pack textures -END- ]]------------------------
+
+		wpn\dshkm\body				=	bump_mode[none], material[2.85], parallax[no]
+		wpn\dshkm\handle			=	bump_mode[none], material[2.85], parallax[no]
+		
+		wpn\upgrades\ammo-m433		=	bump_mode[use:wpn\upgrades\ammo-m433_bump], material[2.85], parallax[no]
+		wpn\upgrades\wpn_m203_long	=	bump_mode[use:wpn\upgrades\wpn_m203_long_bump], material[2.85], parallax[no]
+		wpn\upgrades\wpn_m203_short	=	bump_mode[use:wpn\upgrades\wpn_m203_short_bump], material[2.85], parallax[no]
+		wpn\m16\mag_ar_20rd			=	bump_mode[use:wpn\m16\mag_ar_20rd_bump], material[2.85], parallax[no]
+		wpn\m16\grips_m16a1			=	bump_mode[use:wpn\m16\grips_m16a1_bump], material[2.85], parallax[no]
+		wpn\m16\mag_ar_20rd			=	bump_mode[use:wpn\m16\mag_ar_20rd_bump], material[2.85], parallax[no]
+		wpn\m16\body_m16a1			=	bump_mode[use:wpn\m16\body_m16a1_bump], material[2.85], parallax[no]
+		wpn\m16\body_xm16e1			=	bump_mode[use:wpn\m16\body_m16a1_bump], material[2.85], parallax[no]
+		wpn\m16\scope_colt			=	bump_mode[none], material[2.85], parallax[no]
+		wpn\m16\masterkey_mount		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\m16\mag_ar_30rd			=	bump_mode[use:wpn\m16\mag_ar_30rd_bump], material[2.85], parallax[no]
+		wpn\m16\grips_m16			=	bump_mode[none], material[2.85], parallax[no]
+		wpn\m16\grips_xm16e1		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\m16\foregrip_m203		=	bump_mode[none], material[2.85], parallax[no]
+
+		wpn\upgrades\3D_acog		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_airgun		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_clear		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_eotech		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_f2000_black	=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_f2000_green	=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_l96			=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_mdot		=	bump_mode[none], material[2.85], parallax[no]
+		wpn\upgrades\3D_pu			=	bump_mode[none], material[2.85], parallax[no]
+		
+		
+		
