--- a/gamedata/config/external.ltx
+++ b/gamedata/config/external.ltx
@@ -110,7 +110,7 @@ ogse_new_slots = true
 ogse_wpn_zoom_system = true
 
 ; Цена оружия будет включать в себя стоимость установленных аддонов
-wpn_cost_include_addons = false
+wpn_cost_include_addons = true
 
 ; блокировка перезарядки по время спринта.
 lock_reload_in_sprint = true
@@ -143,7 +143,7 @@ use_trade_deficit_factor = false
 ; В ПДА, для каждого задания будут показываться только следующее
 ; подзадание и все предыдущие. Т.е. подзадания будут открываться по
 ; мере выполнения.
-show_objectives_ondemand = false
+show_objectives_ondemand = true
 
 ; Подбирать можно только предметы, которые находятся на виду. Т.е. не
 ; подбирать предметы из закрытых шкафчиков.
@@ -156,6 +156,9 @@ npc_simplified_shooting = true
 ; Включить автоперезарядку когда в оружии закончились патроны.
 ; Опция для совсем ленивых, не способных привыкнуть, что оружие само по себе перезаряжаться не может.
 autoreload_wpn = false
+
+; Рисовать кровь от попаданий только на геометрии, не на динамических объектах.
+wallmarks_on_static_only = true
 
 
 [dragdrop]
