--- a/gamedata/config/game_story_ids.ltx
+++ b/gamedata/config/game_story_ids.ltx
@@ -54,6 +54,7 @@
   093           = "fox_case"
   094           = "secret_tolik"
 ;  095           = "esc_wmgr_box"
+	095           = "esc_guns_remontnik"
   096           = "lc_esc_to_gar_2"
   097           = "lc_esc_to_ds"
 ;  098           = TODO: in all.spawn is assigned to object "esc_new_on_elevator_sr"
@@ -973,6 +974,53 @@
   7350          = "klondaik_key"
   7351          = "klondaik"
   7352          = "filin"
+  
+  7353          = "kulg_band_vater"
+  7354          = "kulgband_looser"
+  7355          = "kulgband_trader"
+  7356          = "kulgband_trader_car1"
+  7357          = "kulgband_trader_car2"
+  7358          = "dar_farm_assistant"
+  7359          = "dar_assistant_friend"
+  7360          = "dar_filin_shron_door"
+  7361          = "dar_assistant_friend_zone"
+  7362          = "kulgband_scout"
+  7363          = "mil_kulgband_scout_zone"
+  7364          = "kulgband_bool"
+  7365          = "mil_monolith_man1"
+  7366          = "mil_monolith_man2"
+  7367          = "mil_monolith_man3"
+  7368          = "suicider_grenade"
+  7369          = "kulgband_trader_zone"
+  7370          = "kulgband_trader2"
+  7371          = "val_trader_npc"
+  7372          = "rad_kulgband_assistant"
+  7373          = "rad_kulgband_assistant_zone"
+  7374          = "dar_kulgband_bridge_zone"
+  7375          = "dar_bridge_kulgband_man1"
+  7376          = "dar_bridge_kulgband_man2"
+  7377          = "dar_bridge_kulgband_man3"
+  7378          = "dar_bridge_kulgband_assist1"
+  7379          = "dar_bridge_kulgband_assist2"
+  7380          = "kulgband_hutor_house_seif"
+  7381          = "kulgband_seif_dead_man"
+  7382          = "dar_bridge_kulgband_glavar"
+  7383          = "kulgband_scout_shron_zone"
+  7384          = "kulgband_meet_zone"
+  7385          = "city_kulgband_glavar"
+  7386          = "city_kulgband_telohr1"
+  7387          = "city_kulgband_telohr2"
+  7388          = "city_kulgband_shesterka"
+  7389          = "city_kulgband_patruln"
+  7390          = "city_kulgband_assist1"
+  7391          = "city_kulgband_assist2"
+  7392          = "kulgband_hutor_deadman"
+  7393          = "kulgband_informer"
+  7394          = "kulgband_informer_zone"
+  7395          = "kulgband_informer_seif"
+  7396          = "city_kulgband_glavar2"
+  7397          = "cit_kulgband_car"
+  7398          = "cit_kulgband_sniper"
 
   8055          = "bar_wpn_ak74u"
 
