--- a/gamedata/config/zones/zone_monolith.ltx
+++ b/gamedata/config/zones/zone_monolith.ltx
@@ -54,3 +54,8 @@ blowout_wind		= off
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;рождение артефактов во время срабатывания
 spawn_blowout_artefacts = off
+
+
+[af_medusa_special_zone]:zone_monolith
+script_binding          = bind_restrictor.bind
+custom_data = scripts\jek@n\restrictions\af_medusa_special_zone.ltx
