--- a/gamedata/config/scripts/k01jan/esc_guns_remontnik_logic.ltx
+++ b/gamedata/config/scripts/k01jan/esc_guns_remontnik_logic.ltx
@@ -1,5 +1,4 @@
-;Alternative K01jan MOD
-;Логика ремонтника в лагере новичков на Кордоне
+;Логика Оружейника в лагере новичков на Кордоне
 
 [logic]
 active = walker@work
@@ -7,8 +6,7 @@ active = walker@work
 danger = danger_ignore
 combat_ignore = combat_ignore
 on_death = death
-;trade = misc\trade_esc_guns_remontnik.ltx
-trade = misc\trade_new_weapons.ltx
+trade = misc\trade_armourer.ltx
 trader_flags = 0
 inv_max_weight = 10000
 
