--- a/gamedata/config/scripts/jek@n/klondike_particle_zone.ltx
+++ b/gamedata/config/scripts/jek@n/klondike_particle_zone.ltx
@@ -2,8 +2,9 @@
 active = sr_idle@klondike_idle
 
 [sr_idle@klondike_idle]
-on_actor_inside = {=have_klondike_key -klondike_activated} sr_particle@klondike_activated
+on_actor_inside = {=have_klondike_key -klondike_activated +klondike_acess} sr_particle@klondike_activated
 on_info = {+klondike_activated} sr_idle@disabled
+on_info2 = {+klondike_on} sr_particle@klondike_activated
 
 [sr_particle@klondike_activated]
 name = anomaly2\anomaly_spatial_bubble_rupture
